# legendary-spoon

./: .gitignore  README.md  control.ipynb  occ_grid.txt  sandbox.py  test.sh
.devcontainer/: Dockerfile  devcontainer.json
src/flyappy_autonomy_code/: CMakeLists.txt
src/flyappy_autonomy_code/include/flyappy_autonomy_code/: flyappy.hpp  flyappy_ros.hpp
src/flyappy_autonomy_code/launch/: flyappy_autonomy_code_cpp.launch
src/flyappy_autonomy_code/src/: flyappy.cpp  flyappy_ros.cpp
src/flyappy_autonomy_code/tests/: test_my_feature.cpp
src/flyappy_main_game/scripts/: flyappy.py
